correct spacing

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 .hero {
     background-color: #1F2937;
+    padding-bottom: 20px;
 }
 
 .link {
@@ -65,6 +66,7 @@ button {
     display: flex;
     padding: 80px;
     justify-content: space-around;
+    
 }
 
 .left-main {
